# CUDA-MSST-Infer

./: .gitignore  CMakeLists.txt  README.md  benchmark_final.py  benchmark_v2.py  quick_bench.py
.github/workflows/: build.yml
docs/plans/: 2026-04-18-server-mode-design.md
src/: audio_io.cpp  audio_io.h  flash_attention.cuh  http_server.cpp  http_server.h  inference_app.cpp  inference_app.h  main.cpp  memory_pool.h  model_bs_roformer.cu  model_bs_roformer.h  model_htdemucs.cu  model_htdemucs.h  model_mdx23c.cu  model_mdx23c.h  model_mel_band_roformer.cu  model_mel_band_roformer.h  ops.h  ops_attention.cu  ops_conv.cu  ops_elementwise.cu  ops_fused.cu  ops_linear.cu  ops_misc.cu  ops_norm.cu  ops_stft.cu  python_bindings.cpp  tensor.cu  tensor.h  webui.html  webui.html.bak  weights.cu  weights.h
tools/: batch_convert_and_upload.py  convert_weights.py  embed_html.py
